--- a/test/form/index.html
+++ b/test/form/index.html
@@ -47,14 +47,14 @@
                     <div class="hide valid-error"></div>
                 </div>
 
-                <!-- <div>
+                <div>
                     <label>email:</label>
                     <input type="text" class="validate" name="email" 
-                    data-valid-type="email" data-valid-state="0" />
+                    data-valid-type="email" data-valid-state="1" data-valid-rules="norequired"/>
                     <div class="hide valid-error"></div>
                 </div>
         
-                <div>
+                <!--<div>
                     <label>number:</label>
                     <input type="text" class="validate" name="number" 
                     data-valid-type="number" data-valid-state="0" />
