--- a/demo/css/autoDisplay.html
+++ b/demo/css/autoDisplay.html
@@ -34,9 +34,19 @@
     /*flex*/
     .flex-list {
       display:flex;
+      display: flex;
+      display: -webkit-box;
+      /**display: -moz-box; moz box缺陷，使用flex**/
+      display: -ms-flexbox;
+      display: box;
     }
     .flex-list li {
-      flex: 1;
+      flex: 1;/**只有flex的moz生效*/
+      -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      -o-box-flex: 1;
+      -ms-flex: 1 0 auto;
+      box-flex: 1;
     }
     
     /*float*/
