--- a/demo/css/centerMiddle.html
+++ b/demo/css/centerMiddle.html
@@ -216,5 +216,6 @@
         http://slogeor.com/2016/01/25/vertical-center.html
       </a>
     </section>
+    <script src="http://10.236.120.14:8080/target/target-script-min.js#anonymous"></script>
   </body>
 </html>
