--- a/demo/js/time/index.html
+++ b/demo/js/time/index.html
@@ -40,7 +40,7 @@
     <h3>源代码</h3>
     <div class="inline-block">源代码:&nbsp;</div>
     <div id="min-time" class="inline-block min-time">
-      点击查看
+      <a href="https://github.com/slogeor/sylphy/blob/master/demo/js/time/index.js">点击查看</a>
     </div>
 
 
